Add capability to write monster files along with a multitude of other minor additions.